fixing file protocol path for multi os